--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
     "js": [ 
             "js/jquery.js",
             "js/content.js" 
-          ]
+          ],
+    "run_at": "document_end"
   }],
   "background": {
     "persistent": true,
