--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "DOM manipulation Example",
+  "name": "Count of likes received by video",
   "version": "1.0",
   "description": "Helps to see no of likes video has received without opening them",
   "icons": { 
-    "48": "image/youtube_likes48.png",
-    "128": "image/youtube_likes128.png" 
+    "48": "images/youtube_likes48.png",
+    "128": "images/youtube_likes128.png" 
     },
   "content_scripts": [{
     "matches": ["*://*.youtube.com/*"],
